# revisitr

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  Makefile  README.md
.ai-memory/: README.md  decisions.md  gotchas.md  iiko_integration.md  patterns.md  status.md  testing.md
.claude/: launch.json  settings.json
.serena/: project.yml
backend/: Dockerfile  Dockerfile.admin-bot  Dockerfile.bot  Dockerfile.masterbot  go.mod  go.sum
docs/: architecture.md  phase4-analysis.md  telegram-api-integration-analysis.md  telegram-bot-e2e-report-2026-04-14.md  testing-design.md  testing-report-2026-04-14.md  testing.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
iiko-plugin/: .gitignore  README.md
infra/: .env.dev  .env.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx-dev.revisitr.conf  nginx-revisitr.conf
migrations/: 00033_master_bot.sql  00034_post_codes.sql  00035_baratie_demo.sql  00036_baratie_demo_content.sql  00037_baratie_demo_newlines.sql  00038_baratie_menu_template.sql  00039_baratie_nautical_copy.sql  00040_baratie_welcome_sync.sql
scripts/: deploy.sh  migrate.sh
telegram/: .env.example  README.md  pyproject.toml
telegram/revisitr_telegram/: __init__.py  __main__.py  client.py  flow_walker.py  response_collector.py
telegram/tests/: conftest.py  test_masterbot_e2e.py  test_own_bot.py
(+628 files in other folders)
